Feature/add observability logging (#93)
* refactor: rename project from client-management-api to client-hub-api

* refactor: lowercase all log messages in service and repository layers

* refactor: standardize log placement in jdbc repository, fix package, and remove unused repositories

* feat: add structured logging across controller, repository, and service layers